Kaggle Notebook | Exercise: Arithmetic and Variables | Assignment 1 - Arithmetics an Variables

--- a/exercise-arithmetic-and-variables.ipynb
+++ b/exercise-arithmetic-and-variables.ipynb
@@ -2,16 +2,16 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "cd6ed74d",
+   "id": "10375423",
    "metadata": {
     "jupyter": {
      "source_hidden": true
     },
     "papermill": {
-     "duration": 0.005262,
-     "end_time": "2025-02-18T10:19:01.958527",
+     "duration": 0.005336,
+     "end_time": "2025-02-18T10:29:53.278053",
      "exception": false,
-     "start_time": "2025-02-18T10:19:01.953265",
+     "start_time": "2025-02-18T10:29:53.272717",
      "status": "completed"
     },
     "tags": []
@@ -24,13 +24,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5937bb81",
+   "id": "88210609",
    "metadata": {
     "papermill": {
-     "duration": 0.004299,
-     "end_time": "2025-02-18T10:19:01.967585",
+     "duration": 0.004445,
+     "end_time": "2025-02-18T10:29:53.287718",
      "exception": false,
-     "start_time": "2025-02-18T10:19:01.963286",
+     "start_time": "2025-02-18T10:29:53.283273",
      "status": "completed"
     },
     "tags": []
@@ -51,19 +51,19 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "9d9ebd35",
+   "id": "56e2c84d",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-02-18T10:19:01.978341Z",
-     "iopub.status.busy": "2025-02-18T10:19:01.977819Z",
-     "iopub.status.idle": "2025-02-18T10:19:03.049478Z",
-     "shell.execute_reply": "2025-02-18T10:19:03.047737Z"
+     "iopub.execute_input": "2025-02-18T10:29:53.298566Z",
+     "iopub.status.busy": "2025-02-18T10:29:53.298228Z",
+     "iopub.status.idle": "2025-02-18T10:29:54.199282Z",
+     "shell.execute_reply": "2025-02-18T10:29:54.197963Z"
     },
     "papermill": {
-     "duration": 1.080572,
-     "end_time": "2025-02-18T10:19:03.052769",
+     "duration": 0.908726,
+     "end_time": "2025-02-18T10:29:54.201198",
      "exception": false,
-     "start_time": "2025-02-18T10:19:01.972197",
+     "start_time": "2025-02-18T10:29:53.292472",
      "status": "completed"
     },
     "tags": []
@@ -87,13 +87,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7a542bab",
+   "id": "b3c69b25",
    "metadata": {
     "papermill": {
-     "duration": 0.004846,
-     "end_time": "2025-02-18T10:19:03.063136",
+     "duration": 0.004526,
+     "end_time": "2025-02-18T10:29:54.210872",
      "exception": false,
-     "start_time": "2025-02-18T10:19:03.058290",
+     "start_time": "2025-02-18T10:29:54.206346",
      "status": "completed"
     },
     "tags": []
@@ -111,19 +111,19 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "fdb71fe6",
+   "id": "0032d8d4",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-02-18T10:19:03.076494Z",
-     "iopub.status.busy": "2025-02-18T10:19:03.075804Z",
-     "iopub.status.idle": "2025-02-18T10:19:03.086790Z",
-     "shell.execute_reply": "2025-02-18T10:19:03.085673Z"
+     "iopub.execute_input": "2025-02-18T10:29:54.221530Z",
+     "iopub.status.busy": "2025-02-18T10:29:54.221004Z",
+     "iopub.status.idle": "2025-02-18T10:29:54.230461Z",
+     "shell.execute_reply": "2025-02-18T10:29:54.229589Z"
     },
     "papermill": {
-     "duration": 0.01933,
-     "end_time": "2025-02-18T10:19:03.088687",
+     "duration": 0.016504,
+     "end_time": "2025-02-18T10:29:54.231955",
      "exception": false,
-     "start_time": "2025-02-18T10:19:03.069357",
+     "start_time": "2025-02-18T10:29:54.215451",
      "status": "completed"
     },
     "tags": []
@@ -170,13 +170,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "027dd6de",
+   "id": "361dd102",
    "metadata": {
     "papermill": {
-     "duration": 0.006266,
-     "end_time": "2025-02-18T10:19:03.100574",
+     "duration": 0.004734,
+     "end_time": "2025-02-18T10:29:54.241801",
      "exception": false,
-     "start_time": "2025-02-18T10:19:03.094308",
+     "start_time": "2025-02-18T10:29:54.237067",
      "status": "completed"
     },
     "tags": []
@@ -202,19 +202,19 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "702398c2",
+   "id": "c3960341",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-02-18T10:19:03.113621Z",
-     "iopub.status.busy": "2025-02-18T10:19:03.113248Z",
-     "iopub.status.idle": "2025-02-18T10:19:03.123046Z",
-     "shell.execute_reply": "2025-02-18T10:19:03.121959Z"
+     "iopub.execute_input": "2025-02-18T10:29:54.252992Z",
+     "iopub.status.busy": "2025-02-18T10:29:54.252595Z",
+     "iopub.status.idle": "2025-02-18T10:29:54.261309Z",
+     "shell.execute_reply": "2025-02-18T10:29:54.260274Z"
     },
     "papermill": {
-     "duration": 0.018975,
-     "end_time": "2025-02-18T10:19:03.125413",
+     "duration": 0.016237,
+     "end_time": "2025-02-18T10:29:54.262976",
      "exception": false,
-     "start_time": "2025-02-18T10:19:03.106438",
+     "start_time": "2025-02-18T10:29:54.246739",
      "status": "completed"
     },
     "tags": []
@@ -224,7 +224,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Python is the language of the future!\n"
+      "Python is the language of the future!\n",
+      "3+4\n"
      ]
     },
     {
@@ -256,19 +257,21 @@
     "# TODO: Change the message\n",
     "print(\"Python is the language of the future!\")\n",
     "\n",
+    "print(\"3+4\") #This is a statement,not the actual addition of variables 4 and 3\n",
+    "\n",
     "# DO NOT REMOVE: Mark this question as completed \n",
     "q2.check()"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "3ea11ea1",
+   "id": "a9542728",
    "metadata": {
     "papermill": {
-     "duration": 0.005223,
-     "end_time": "2025-02-18T10:19:03.136182",
+     "duration": 0.004928,
+     "end_time": "2025-02-18T10:29:54.273262",
      "exception": false,
-     "start_time": "2025-02-18T10:19:03.130959",
+     "start_time": "2025-02-18T10:29:54.268334",
      "status": "completed"
     },
     "tags": []
@@ -294,19 +297,19 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "ff1ae62f",
+   "id": "67f051d9",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-02-18T10:19:03.148048Z",
-     "iopub.status.busy": "2025-02-18T10:19:03.147668Z",
-     "iopub.status.idle": "2025-02-18T10:19:03.161905Z",
-     "shell.execute_reply": "2025-02-18T10:19:03.160797Z"
+     "iopub.execute_input": "2025-02-18T10:29:54.284747Z",
+     "iopub.status.busy": "2025-02-18T10:29:54.284395Z",
+     "iopub.status.idle": "2025-02-18T10:29:54.297589Z",
+     "shell.execute_reply": "2025-02-18T10:29:54.296669Z"
     },
     "papermill": {
-     "duration": 0.022303,
-     "end_time": "2025-02-18T10:19:03.163807",
+     "duration": 0.020731,
+     "end_time": "2025-02-18T10:29:54.299139",
      "exception": false,
-     "start_time": "2025-02-18T10:19:03.141504",
+     "start_time": "2025-02-18T10:29:54.278408",
      "status": "completed"
     },
     "tags": []
@@ -398,13 +401,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3b0d0139",
+   "id": "b5bd8c76",
    "metadata": {
     "papermill": {
-     "duration": 0.005685,
-     "end_time": "2025-02-18T10:19:03.175633",
+     "duration": 0.005717,
+     "end_time": "2025-02-18T10:29:54.310932",
      "exception": false,
-     "start_time": "2025-02-18T10:19:03.169948",
+     "start_time": "2025-02-18T10:29:54.305215",
      "status": "completed"
     },
     "tags": []
@@ -415,13 +418,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1856485e",
+   "id": "82251013",
    "metadata": {
     "papermill": {
-     "duration": 0.005678,
-     "end_time": "2025-02-18T10:19:03.187245",
+     "duration": 0.0056,
+     "end_time": "2025-02-18T10:29:54.322269",
      "exception": false,
-     "start_time": "2025-02-18T10:19:03.181567",
+     "start_time": "2025-02-18T10:29:54.316669",
      "status": "completed"
     },
     "tags": []
@@ -435,19 +438,19 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "61727643",
+   "id": "afdb64ea",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-02-18T10:19:03.200393Z",
-     "iopub.status.busy": "2025-02-18T10:19:03.200013Z",
-     "iopub.status.idle": "2025-02-18T10:19:03.205618Z",
-     "shell.execute_reply": "2025-02-18T10:19:03.204329Z"
+     "iopub.execute_input": "2025-02-18T10:29:54.335446Z",
+     "iopub.status.busy": "2025-02-18T10:29:54.334990Z",
+     "iopub.status.idle": "2025-02-18T10:29:54.341177Z",
+     "shell.execute_reply": "2025-02-18T10:29:54.339895Z"
     },
     "papermill": {
-     "duration": 0.014028,
-     "end_time": "2025-02-18T10:19:03.207211",
+     "duration": 0.014735,
+     "end_time": "2025-02-18T10:29:54.342889",
      "exception": false,
-     "start_time": "2025-02-18T10:19:03.193183",
+     "start_time": "2025-02-18T10:29:54.328154",
      "status": "completed"
     },
     "tags": []
@@ -476,13 +479,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b4f94f20",
+   "id": "9f276e7a",
    "metadata": {
     "papermill": {
-     "duration": 0.005897,
-     "end_time": "2025-02-18T10:19:03.219222",
+     "duration": 0.005646,
+     "end_time": "2025-02-18T10:29:54.354600",
      "exception": false,
-     "start_time": "2025-02-18T10:19:03.213325",
+     "start_time": "2025-02-18T10:29:54.348954",
      "status": "completed"
     },
     "tags": []
@@ -498,24 +501,31 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "985695cd",
+   "id": "b12c4b10",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-02-18T10:19:03.233109Z",
-     "iopub.status.busy": "2025-02-18T10:19:03.232735Z",
-     "iopub.status.idle": "2025-02-18T10:19:03.242575Z",
-     "shell.execute_reply": "2025-02-18T10:19:03.241328Z"
+     "iopub.execute_input": "2025-02-18T10:29:54.367740Z",
+     "iopub.status.busy": "2025-02-18T10:29:54.367363Z",
+     "iopub.status.idle": "2025-02-18T10:29:54.376060Z",
+     "shell.execute_reply": "2025-02-18T10:29:54.375155Z"
     },
     "papermill": {
-     "duration": 0.019261,
-     "end_time": "2025-02-18T10:19:03.244561",
+     "duration": 0.016906,
+     "end_time": "2025-02-18T10:29:54.377480",
      "exception": false,
-     "start_time": "2025-02-18T10:19:03.225300",
+     "start_time": "2025-02-18T10:29:54.360574",
      "status": "completed"
     },
     "tags": []
    },
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "360000\n"
+     ]
+    },
     {
      "data": {
       "application/javascript": [
@@ -548,6 +558,8 @@
     "# TODO: Set the value of the births_per_day variable\n",
     "births_per_day = births_per_min * mins_per_hour * hours_per_day\n",
     "\n",
+    "print(births_per_day)\n",
+    "\n",
     "# DO NOT REMOVE: Check your answer\n",
     "q4.check()"
    ]
@@ -555,19 +567,19 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "ff012fe1",
+   "id": "25251fb7",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-02-18T10:19:03.258457Z",
-     "iopub.status.busy": "2025-02-18T10:19:03.258119Z",
-     "iopub.status.idle": "2025-02-18T10:19:03.269370Z",
-     "shell.execute_reply": "2025-02-18T10:19:03.268124Z"
+     "iopub.execute_input": "2025-02-18T10:29:54.391294Z",
+     "iopub.status.busy": "2025-02-18T10:29:54.390937Z",
+     "iopub.status.idle": "2025-02-18T10:29:54.401642Z",
+     "shell.execute_reply": "2025-02-18T10:29:54.400579Z"
     },
     "papermill": {
-     "duration": 0.020271,
-     "end_time": "2025-02-18T10:19:03.271292",
+     "duration": 0.019371,
+     "end_time": "2025-02-18T10:29:54.403348",
      "exception": false,
-     "start_time": "2025-02-18T10:19:03.251021",
+     "start_time": "2025-02-18T10:29:54.383977",
      "status": "completed"
     },
     "tags": []
@@ -648,13 +660,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "20290cdc",
+   "id": "2e6f9ad6",
    "metadata": {
     "papermill": {
-     "duration": 0.006409,
-     "end_time": "2025-02-18T10:19:03.284658",
+     "duration": 0.006347,
+     "end_time": "2025-02-18T10:29:54.416580",
      "exception": false,
-     "start_time": "2025-02-18T10:19:03.278249",
+     "start_time": "2025-02-18T10:29:54.410233",
      "status": "completed"
     },
     "tags": []
@@ -674,19 +686,19 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "91004c57",
+   "id": "4f79c12d",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-02-18T10:19:03.299942Z",
-     "iopub.status.busy": "2025-02-18T10:19:03.299605Z",
-     "iopub.status.idle": "2025-02-18T10:19:03.349405Z",
-     "shell.execute_reply": "2025-02-18T10:19:03.348247Z"
+     "iopub.execute_input": "2025-02-18T10:29:54.431109Z",
+     "iopub.status.busy": "2025-02-18T10:29:54.430712Z",
+     "iopub.status.idle": "2025-02-18T10:29:54.475041Z",
+     "shell.execute_reply": "2025-02-18T10:29:54.473955Z"
     },
     "papermill": {
-     "duration": 0.059463,
-     "end_time": "2025-02-18T10:19:03.351308",
+     "duration": 0.053434,
+     "end_time": "2025-02-18T10:29:54.476615",
      "exception": false,
-     "start_time": "2025-02-18T10:19:03.291845",
+     "start_time": "2025-02-18T10:29:54.423181",
      "status": "completed"
     },
     "tags": []
@@ -846,13 +858,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "434de616",
+   "id": "9c382a60",
    "metadata": {
     "papermill": {
-     "duration": 0.006693,
-     "end_time": "2025-02-18T10:19:03.365426",
+     "duration": 0.006561,
+     "end_time": "2025-02-18T10:29:54.490523",
      "exception": false,
-     "start_time": "2025-02-18T10:19:03.358733",
+     "start_time": "2025-02-18T10:29:54.483962",
      "status": "completed"
     },
     "tags": []
@@ -871,19 +883,19 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "3693e1d3",
+   "id": "f783c090",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-02-18T10:19:03.380476Z",
-     "iopub.status.busy": "2025-02-18T10:19:03.380126Z",
-     "iopub.status.idle": "2025-02-18T10:19:03.391182Z",
-     "shell.execute_reply": "2025-02-18T10:19:03.389894Z"
+     "iopub.execute_input": "2025-02-18T10:29:54.505537Z",
+     "iopub.status.busy": "2025-02-18T10:29:54.505142Z",
+     "iopub.status.idle": "2025-02-18T10:29:54.515739Z",
+     "shell.execute_reply": "2025-02-18T10:29:54.514547Z"
     },
     "papermill": {
-     "duration": 0.020721,
-     "end_time": "2025-02-18T10:19:03.393089",
+     "duration": 0.020022,
+     "end_time": "2025-02-18T10:29:54.517353",
      "exception": false,
-     "start_time": "2025-02-18T10:19:03.372368",
+     "start_time": "2025-02-18T10:29:54.497331",
      "status": "completed"
     },
     "tags": []
@@ -923,13 +935,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "93afb9e3",
+   "id": "4988c0a8",
    "metadata": {
     "papermill": {
-     "duration": 0.006828,
-     "end_time": "2025-02-18T10:19:03.407267",
+     "duration": 0.006759,
+     "end_time": "2025-02-18T10:29:54.531258",
      "exception": false,
-     "start_time": "2025-02-18T10:19:03.400439",
+     "start_time": "2025-02-18T10:29:54.524499",
      "status": "completed"
     },
     "tags": []
@@ -952,19 +964,19 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "5a4cfe3e",
+   "id": "853a711d",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-02-18T10:19:03.422645Z",
-     "iopub.status.busy": "2025-02-18T10:19:03.422222Z",
-     "iopub.status.idle": "2025-02-18T10:19:03.431557Z",
-     "shell.execute_reply": "2025-02-18T10:19:03.430430Z"
+     "iopub.execute_input": "2025-02-18T10:29:54.546559Z",
+     "iopub.status.busy": "2025-02-18T10:29:54.546233Z",
+     "iopub.status.idle": "2025-02-18T10:29:54.554662Z",
+     "shell.execute_reply": "2025-02-18T10:29:54.553855Z"
     },
     "papermill": {
-     "duration": 0.019206,
-     "end_time": "2025-02-18T10:19:03.433406",
+     "duration": 0.018001,
+     "end_time": "2025-02-18T10:29:54.556257",
      "exception": false,
-     "start_time": "2025-02-18T10:19:03.414200",
+     "start_time": "2025-02-18T10:29:54.538256",
      "status": "completed"
     },
     "tags": []
@@ -1023,19 +1035,19 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "3bf9ee96",
+   "id": "e59c5abb",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-02-18T10:19:03.450183Z",
-     "iopub.status.busy": "2025-02-18T10:19:03.449786Z",
-     "iopub.status.idle": "2025-02-18T10:19:03.461617Z",
-     "shell.execute_reply": "2025-02-18T10:19:03.460339Z"
+     "iopub.execute_input": "2025-02-18T10:29:54.571759Z",
+     "iopub.status.busy": "2025-02-18T10:29:54.571419Z",
+     "iopub.status.idle": "2025-02-18T10:29:54.581427Z",
+     "shell.execute_reply": "2025-02-18T10:29:54.580377Z"
     },
     "papermill": {
-     "duration": 0.021784,
-     "end_time": "2025-02-18T10:19:03.463253",
+     "duration": 0.019246,
+     "end_time": "2025-02-18T10:29:54.582877",
      "exception": false,
-     "start_time": "2025-02-18T10:19:03.441469",
+     "start_time": "2025-02-18T10:29:54.563631",
      "status": "completed"
     },
     "tags": []
@@ -1128,13 +1140,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6858d48f",
+   "id": "5e7a363b",
    "metadata": {
     "papermill": {
-     "duration": 0.00731,
-     "end_time": "2025-02-18T10:19:03.478659",
+     "duration": 0.007819,
+     "end_time": "2025-02-18T10:29:54.598380",
      "exception": false,
-     "start_time": "2025-02-18T10:19:03.471349",
+     "start_time": "2025-02-18T10:29:54.590561",
      "status": "completed"
     },
     "tags": []
@@ -1156,13 +1168,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "075b3efb",
+   "id": "beae89d0",
    "metadata": {
     "papermill": {
-     "duration": 0.00724,
-     "end_time": "2025-02-18T10:19:03.493653",
+     "duration": 0.007431,
+     "end_time": "2025-02-18T10:29:54.613437",
      "exception": false,
-     "start_time": "2025-02-18T10:19:03.486413",
+     "start_time": "2025-02-18T10:29:54.606006",
      "status": "completed"
     },
     "tags": []
@@ -1211,14 +1223,14 @@
   },
   "papermill": {
    "default_parameters": {},
-   "duration": 5.068529,
-   "end_time": "2025-02-18T10:19:04.121753",
+   "duration": 5.205577,
+   "end_time": "2025-02-18T10:29:55.242602",
    "environment_variables": {},
    "exception": null,
    "input_path": "__notebook__.ipynb",
    "output_path": "__notebook__.ipynb",
    "parameters": {},
-   "start_time": "2025-02-18T10:18:59.053224",
+   "start_time": "2025-02-18T10:29:50.037025",
    "version": "2.6.0"
   }
  },
